--- a/Sentiment_Analysis_and_Classification_of_Tweets.ipynb
+++ b/Sentiment_Analysis_and_Classification_of_Tweets.ipynb
@@ -7138,7 +7138,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **Analysis**\n",
+        "### **Conclusions**\n",
         "\n",
         "* Regarding the architecture, we have observed some enhancements after making changes. Specifically, increasing the number of layers has led to improved performance, although not to a significant extent\n",
         "\n",
